package adapter.objectAdapter;

public interface Voltage5 {
    public int output5();
}
